src/features/Header/Header.css
header .logo {
    font-weight: bold;
    padding: var(--spacing-1) 0;
    grid-column: 1/2;
    display: flex;
    align-content: center;
}

header {
    background: rgba(238, 208, 208, 0.623);
    color: var(--color-branding);
    box-shadow: var(--box-shadow);
    height: 64px;
    padding: 0 var(--spacing-5);
}

header .logo-icon {
   grid-column: 2/3;
   margin-right: var(--spacing-1);
   font-size: 2rem;
}

header span {
    color: var(--color-text-header)
}

.search {
    display: flex;
    align-content: center;
}

.search input {
    flex-grow: 1;
    background: var(--color-background);
    border: none;
    padding: var(--spacing-1) var(--spacing-2);
    height: max-content;
    border-radius: var(--radius);
    cursor:text;
}

.search input:hover {
    color: var(--color-foreground);
}

header button {
    padding-left: 0;
    margin-left: 0;
    width: 20%;
    
}

